wp-content/themes/makerfaire/less/navigation.less
// Dimensions for dfp ads
// Main header ad
#div-gpt-ad-664089004995786621-1 {
  width: 728px;
  height: 90px;
}

// First sidebar ad (top)
#div-gpt-ad-664089004995786621-2 {
  width: 300px;
  height: auto;
}

// Second sidebar 
#div-gpt-ad-664089004995786621-3 {
  width: 300px;
  height: auto;
}

// footer ad
#div-gpt-ad-664089004995786621-4 {
  width: 728px;
  height: 90px;
}

// Grey out nav links
li.disabled a,
li.hidelink a:link,
li.hidelink a:visited {
  color: #999 !important;
  cursor: default !important;
}

#makerfaire .navbar.desktop-nav {
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
  .not-a-link,
  .not-a-link a {
    pointer-events: none;
  }
  a {
    color: #4A4A4A;
    font-size: 12px;
    font-weight: 500;
  }
  .navbar-brand {
    margin: 0 12px 5px 0;
    padding: 0;
    height: auto !important;
    @media(min-width:768px) and (max-width:991px) {
      margin: 0 5px 5px 0;
    }
  }
  .menu-item {
    position: static;
    display: inline-block;
    height: 50px;
    margin-bottom: -1px;
    &:hover > a,
    &:focus > a {
      border-bottom: solid 3px #D94336;
      background-color: inherit;
      height: inherit;
    }
  }
  &.subnav {
    .menu-item {
      height: auto;
    }
    padding-top: 0;
    border: none;
    background: rgba(0,173,239,0.9);
    border-radius: 0;
    min-height: 0;
    margin-bottom: auto;
    .subnav-header {
      width: 190px;
      a {
        padding-left: 0;
      }
    }
    ul {
      list-style: none;
    }
    a {
      color: white;
      cursor: pointer;
      padding: 9px 20px;
      &:hover, &:focus {
        padding-bottom: 6px;
        background: inherit;
        border-bottom: 3px solid rgba(255,255,255,.9);
      }
    }
  }
  .container {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;
    .navbar-collapse {
      flex: 1;
    }
  }
  .drop {
    padding: 30px;
  }
  .menu-item-has-children {
    &> a:after {
      font-family: FontAwesome;
      font-size: 14px;
      line-height: normal;
      content: "\f107";
      margin-left: 2px;
    }
    // navbar dropdown menu:
    .sub-menu {
      opacity: 0;
      visibility: hidden;
      pointer-events: none;
      background: white;
      padding: 10px 0 15px 0;
      position: absolute;
      left: 0;
      right: 0;
      opacity: 1;
      overflow: hidden;
      z-index: 1002;
      background: #e6e6e6 url(../images/bg-border.png) repeat-x 0 100%;
      .container {
        padding-left: 210px;
        position: relative;
      }
      .menu-item {
        display: inline-block;
        list-style: none;
        flex: inherit;
        max-width: 41%;
        white-space: nowrap;
        &:hover a {
          border: none;
        }
        &> a {
          padding: 10px 12px;
          display: block;
          min-height: 40px;
          &:hover {
            border: none;
            color: #8F8E8E;
          }
        }
      }
      .subnav-header {
        position: absolute;
        left: 5px;
        a {
          color: rgba(0,173,239,0.9);
        }
      }
    }
    &:hover .sub-menu {
      opacity: 1;
      visibility: visible;
      pointer-events: inherit;
    }
  }
}
// responsive mobile
.navbar-fixed-top {
  .dropdown-menu {
    border-radius: 0;
  }
  .in {
    -webkit-box-shadow: 0 2px 6px 0px #555;
    -moz-box-shadow: 0 2px 6px 0px #555;
    box-shadow: 0 2px 6px 0px #555;
    margin-bottom: -3px;
    background: rgba(247, 247, 247, 0.94) url(../images/bg-border.png) repeat-x 0 100%;
  }
  .mobile-nav-social {
    height: 85px;
  }
  .nav-follow-us {
    height: 33px;
    float: left;
    padding-top: 4px;
  }
  .social-profile-icons {
    display: inline-block;
    width: 100%;
    padding-left: 80px;
    position: relative;
    top: -33px;
  }
  .mobile-nav-tickets {
    background-color: red;
    color: #fff !important;
  }
  .mobile-nav-tickets:active,
  .mobile-nav-tickets:focus {
    background-color: #0084B5;
    color: #fff;
  }
  .mobile-li-buttons {
    background-color: #fff;
    height: 61px;
    padding: 10px 0;
    .btn-cyan {
      display: block;
      text-align: center;
      font-size: 20px;
    }
    .btn-cyan:hover {
      color: #fff;
    }
  }
}

// Mobile nav button
.navbar-header {
  .navbar-toggle .icon-bar {
    transition: all 500ms ease-in-out;
  }
  .navbar-toggle:not(.collapsed) .icon-bar:nth-of-type(2) {
    top: 10px;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    position: relative;
    transition: all 500ms ease-in-out;
  }
  .navbar-toggle:not(.collapsed) .icon-bar:nth-of-type(3) {
    background-color: transparent;
    position: relative;
    transition: all 500ms ease-in-out;
  }
  .navbar-toggle:not(.collapsed) .icon-bar:nth-of-type(4) {
    top: -8px;
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
    position: relative;
    transition: all 500ms ease-in-out;
  }
}

.sumome-share-client-wrapper {
	display: none !important;
}


// since wordpress won't let us place left-hand-nav after content, responsive reordering of elements has to happen another way
.page-leftnav > .row {
	 @media(max-width: 992px) {
		 -webkit-transform: scaleY(-1);
    	 transform: scaleY(-1);
		 .content {
			-webkit-transform: scaleY(-1);
    		transform: scaleY(-1);
			margin: 0px 30px;
		 }
		 .left-hand-nav {
			 -webkit-transform: scaleY(-1);
    		 transform: scaleY(-1);
		 }
	}
	 
}
// Left Hand Navigation
.left-hand-nav {
	#menu-ny-left-hand-nav {
		margin-top: 15px;
		margin-left: -5px;
		position: relative;
		@media(min-width:992px) and (max-width:1170px) {
			padding-left: 25px;
		}
		li {
			color: #4A4A4A;
			font-family: 'Roboto';
			line-height: 1.2em;
			list-style: none;
			width: 125%;
			margin-left: -25%;
			padding-left: 25%;
			cursor: pointer;
			position: relative;
			a{ 
				padding: 10px 0px;
				display: block;
				&:focus, &:active {
					text-decoration: underline;
				}
			}
			&:hover {
				background: #F0F0F0;
			}
			// dropdown sections
			&.menu-item-has-children {
				ul {
					display:none;
				}
				&.expanded-lnav {
					position: relative;
					&:hover {
						background: linear-gradient(180deg, #ccc 37px, #ffffff 0%);
					}
					ul {
						display: block;
					}
			   }
			}
			&.menu-item-has-children > a {
				display: block;
				height: 37px;
				pointer-events: none;
				&:after {
					content: '+';
					position: absolute;
					top: 10px;
					right: 0px;
					padding-right: 30px;
				}
			}
			&.menu-item-has-children.expanded-lnav > a {
				&:after {
						content: '-';
						font-weight: 600;
				}
			}
		}
		.nav-title {
			font-family: Roboto-Light;
			letter-spacing: 0.26px;
			line-height: 2.2em;
			color: #4A4A4A;
			margin-bottom: 15px;
			padding: 0px;
			margin-left: 0px;
			width: auto;
			text-transform: uppercase;
			&:hover { background: transparent; }
			a {
				font-size: 20px;
				line-height: 24px;
				margin-left: -25%;
				padding-left: 25%;
				@media(max-width:992px) {
					font-size: 20px;
				}
				&:hover {
					background: #F0F0F0;
				}
			}
		}
		.nav-flag {
			width: auto;
			margin-right: 39px;
			background: #00AEEF;
			height: 78px;      
			width: 125%;
			margin-left: -25%;
			padding-left: 25%;
			display: flex;
      	align-items: center;
			&:hover { background: #00AEEF; }
			a { 
				color: #fff;
				font-family: "Roboto Light";
				font-size: 16px;
				line-height: 20px;
				text-transform: uppercase;
				pointer-events: none;
				max-width: 90%;
				@media(max-width:992px) {
					font-size: 22px;
					line-height: 24px;
					margin-top: -10px;
				}
			}		
			&:after {
				content: "";
				border-top: 38px solid transparent;
				border-bottom: 38px solid transparent;
				border-right: 25px solid #fff;
				position: absolute;
				right: 0;
				top: 0px;
			}
		}
		a {
			text-decoration: none;
			color: #4A4A4A;
			font-size: 14px;
			@media(max-width:992px) {
				font-size: 20px;
			}
		}
	}
}

